--- a/02-SOM/biblio_SOM.bib
+++ b/02-SOM/biblio_SOM.bib
@@ -1,3 +1,12 @@
+@Article{Kohonen1982,
+author={Kohonen, Teuvo},
+title={Self-organized formation of topologically correct feature maps},
+journal={Biological Cybernetics},
+year={1982},
+volume={43},
+number={1},
+pages={59--69},
+}
 
 @incollection{cottrell_theoretical_2016,
 	address = {Cham},
@@ -60,10 +69,7 @@
 	booktitle = {1990 {IJCNN} {International} {Joint} {Conference} on {Neural} {Networks}},
 	author = {Koikkalainen, P. and Oja, E.},
 	month = jun,
-	year = {1990},
-	keywords = {neural nets, unsupervised learning, vector quantization, self-adjusting systems, computational complexity, self-organising hierarchical feature maps, TFM algorithm, topological feature map, topology-preserving mapping, tree-structured TFM, visual perception},
-	pages = {279--284 vol.2},
-	file = {IEEE Xplore Abstract Record:/home/noemie/Zotero/storage/DTSVYVLJ/5726686.html:text/html;IEEE Xplore Full Text PDF:/home/noemie/Zotero/storage/7ALTPBQE/Koikkalainen et Oja - 1990 - Self-organizing hierarchical feature maps.pdf:application/pdf},
+	year = {1990}
 }
 
 
