--- a/main.tex
+++ b/main.tex
@@ -40,7 +40,7 @@
 \DeclareMathOperator{\sign}{sgn}
 \newtheorem{propriete}{Propriété}
 \newtheorem{proposition}{Proposition}
-
+\parskip=5pt
 %draft/release options
 \newif\ifDraft
 \newcommand\comment[1]{\ifDraft {\itshape\color{red}{#1}} \fi} %text displayed in draft mode as comments
